--- a/src/assets/style/login.css
+++ b/src/assets/style/login.css
@@ -1,11 +1,15 @@
-body {
-  background-color: #e6d435;
+html,
+body,
+#root {
+  height: 100%;
 }
 
 .container {
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
+  background-color: #e6d435;
+  overflow-y: auto;
 }
 
 .header {
