--- a/src/assets/style/FormAccount.css
+++ b/src/assets/style/FormAccount.css
@@ -8,18 +8,18 @@
   margin-bottom: 45px;
 }
 
-.form-account h3 {
+.form-account-titles {
   margin-left: 7px;
   margin-bottom: 10px;
   margin-top: 0;
 }
 
-.form-account div {
+.form-account-div{
   width: 50%;
   margin-bottom: 15px;
 }
 
-.form-account div input {
+.form-account-div input {
   width: 97%;
   box-sizing: border-box;
   padding: 17px 15px;
@@ -37,7 +37,7 @@
   margin-top: 35px;
 }
 
-.form-account .change-password button {
+.form-account .change-password > button {
   width: 48.5%;
   font-size: 16px;
   color: white;
@@ -54,7 +54,7 @@
   margin-top: 5px;
 }
 
-.form-account .delete-account button {
+.form-account .delete-account > button {
   width: 25%;
   font-size: 14px;
   color: white;
@@ -65,6 +65,7 @@
   font-weight: 500;
   letter-spacing: 1.5px;
   cursor: pointer;
+  margin-top: 10px;
 }
 
 .cancel-update {
