--- a/src/assets/style/FormAddEditTask.css
+++ b/src/assets/style/FormAddEditTask.css
@@ -38,7 +38,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 20px 50px;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.8);
   box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.2);
   color: #fff;
   border-radius: 10px;
@@ -185,7 +185,7 @@
 
 /* lists ---------------- */
 
-.list-task-form h3 {
+.list-task-form-title {
   margin: 0;
   margin-left: 10px;
 }
